k8/service-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: cademy-client
spec:
  selector:
    app: cademy-client   # Matches the label of your Deployment pods
  ports:
    - protocol: TCP
      port: 3000         # The port on the service
      targetPort: 3000   # The container port to forward traffic to
