k8/service-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: cademy-server
spec:
  selector:
    app: cademy-server   # Matches the label of your Deployment pods
  ports:
    - protocol: TCP
      port: 8000          # The port on the service
      targetPort: 8000    # The port on the backend container
