k8/service-ws.yaml
apiVersion: v1
kind: Service
metadata:
  name: cademy-ws
spec:
  selector:
    app: cademy-ws   # Matches the label of your Deployment pods
  ports:
    - protocol: TCP
      port: 8001          # The port on the service
      targetPort: 8001    # The port on the backend container
