k8/cademy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cademy-ingress
  annotations:
    cert-manager.io/cluster-issuer: "cademy-letsencrypt"
    nginx.ingress.kubernetes.io/rewrite-target: /
    
spec:
  ingressClassName: nginx   # Specify the ingress class for NGINX
  rules:
  - host: cademy.decimalight.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cademy-client
            port:
              number: 3000
  - host: api-cademy.decimalight.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cademy-server
            port:
              number: 8000
  - host: ws-cademy.decimalight.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cademy-ws
            port:
              number: 8001
  tls:
  - hosts:
    - cademy.decimalight.in
    - api-cademy.decimalight.in
    - ws-cademy.decimalight.in
    secretName: decimalight-com-tls
