k8/client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cademy-client-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx   # Specify the ingress class for NGINX
  rules:
  - host: cademy.decimalight.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cademy-client
            port:
              number: 3000
