k8/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cademy-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx   # Specify the ingress class for NGINX
  rules:
  - host: api-cademy.decimalight.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cademy-server
            port:
              number: 8000
