k8/ssl-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssl-ingress
  annotations:
    cert-manager.io/cluster-issuer: "cademy-letsencrypt"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  tls:
  - hosts:
    - decimalight.in
    secretName: decimnal-com-tls
