k8/ws-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cademy-ws-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"  # Increase timeout for WebSocket
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"  # Increase timeout for WebSocket
    nginx.ingress.kubernetes.io/enable-websocket: "true"   # Explicitly enable WebSocket support
spec:
  ingressClassName: nginx   # Specify the ingress class for NGINX
  rules:
  - host: ws-cademy.decimalight.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cademy-ws
            port:
              number: 8001
